--- a/src/SFA.DAS.ProviderRelationships.Web.UnitTests/SFA.DAS.ProviderRelationships.Web.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web.UnitTests/SFA.DAS.ProviderRelationships.Web.UnitTests.csproj
@@ -2,6 +2,17 @@
 
   <PropertyGroup>
     <TargetFramework>net462</TargetFramework>
+    <LangVersion>latest</LangVersion>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
   </PropertyGroup>
 
   <ItemGroup>
