--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -50,9 +50,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="BrockAllen.CookieTempData.dll" Version="1.3.0" />
-    <PackageReference Include="Microsoft.ApplicationInsights.Web" Version="2.5.1" />
-    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.2.6" />
-    <PackageReference Include="Microsoft.AspNet.TelemetryCorrelation" Version="1.0.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.Web" Version="2.7.2" />
+    <PackageReference Include="Microsoft.AspNet.Mvc">
+      <Version>5.2.6</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AspNet.TelemetryCorrelation" Version="1.0.4" />
     <PackageReference Include="Microsoft.AspNet.Web.Optimization" Version="1.1.3" />
     <PackageReference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" Version="2.0.1" />
     <PackageReference Include="NLog.Schema" Version="4.5.3" />
