--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -60,13 +60,16 @@
     <PackageReference Include="Microsoft.Owin">
       <Version>4.0.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Owin.Host.SystemWeb">
+      <Version>4.0.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Owin.Security">
       <Version>4.0.0</Version>
     </PackageReference>
     <PackageReference Include="Microsoft.Owin.Security.Cookies">
       <Version>4.0.0</Version>
     </PackageReference>
-    <PackageReference Include="NLog.Schema" Version="4.5.9" />
+    <PackageReference Include="NLog.Schema" Version="4.5.10" />
     <PackageReference Include="SFA.DAS.EmployerUsers.WebClientComponents">
       <Version>1.0.0.52781</Version>
     </PackageReference>
