--- a/src/SFA.DAS.ProviderRelationships.Web/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Web.config
@@ -51,6 +51,21 @@
         <assemblyIdentity name="Microsoft.AspNet.TelemetryCorrelation" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
         <bindingRedirect oldVersion="0.0.0.0-1.0.4.0" newVersion="1.0.4.0"/>
       </dependentAssembly>
+      <dependentAssembly>
+        <!-- SFA.DAS.OidcMiddleware has a reference to version of 3.0.1.0 of this, so we redirect and cross our fingers -->
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <!-- SFA.DAS.OidcMiddleware has a reference to version of 3.0.1.0 of this, so we redirect and cross our fingers -->
+        <assemblyIdentity name="Microsoft.Owin.Security" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0"/>
+      </dependentAssembly>
+      <dependentAssembly>
+        <!--SFA.DAS.Configuration.AzureTableStorage has a reference to version of 8.7.0.0 of this, so we redirect and cross our fingers -->
+        <assemblyIdentity name="Microsoft.WindowsAzure.Storage" publicKeyToken="31bf3856ad364e35" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-9.3.2.0" newVersion="9.3.2.0"/>
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <system.codedom>
