--- a/src/SFA.DAS.ProviderRelationships.Web/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Web.config
@@ -7,8 +7,10 @@
     <add key="ClientValidationEnabled" value="true"/>
     <add key="ConfigurationStorageConnectionString" value="UseDevelopmentStorage=true" />
     <add key="EnvironmentName" value="LOCAL" />
-    <!--a temporary home for the thumbprint...-->
+    <!--todo: a temporary home for the thumbprint...-->
     <add key="TokenCertificateThumbprint" value="6B7ACC520305BFDB4F7252DAEB2177CC091FAAE1" />
+    <!--todo: temporary home-->
+    <add key="MyaBaseUrl" value="https://test2-eas.apprenticeships.sfa.bis.gov.uk/" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
