--- a/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
+++ b/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
@@ -17,12 +17,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper " Version="7.0.1" />
     <PackageReference Include="EntityFramework" Version="6.2.0" />
     <PackageReference Include="FAKEBuildScript" Version="1.2.8" />
     <PackageReference Include="MediatR" Version="5.1.0" />
     <PackageReference Include="SFA.DAS.Configuration" Version="1.0.0.53229" />
     <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="1.0.0.53229" />
     <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
+    <PackageReference Include="SFA.DAS.Providers.Api.Client" Version="0.11.97" />
     <PackageReference Include="StructureMap" Version="4.7.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.3" />
@@ -32,6 +34,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Messages\SFA.DAS.ProviderRelationships.Messages.csproj" />
+    <ProjectReference Include="..\SFA.DAS.Validation\SFA.DAS.Validation.csproj" />
   </ItemGroup>
 
   <ItemGroup>
