--- a/src/SFA.DAS.ProviderRelationships.Web.UnitTests/SFA.DAS.ProviderRelationships.Web.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web.UnitTests/SFA.DAS.ProviderRelationships.Web.UnitTests.csproj
@@ -21,6 +21,7 @@
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <PackageReference Include="SFA.DAS.Testing" Version="1.0.14" />
+    <PackageReference Include="SFA.DAS.Validation" Version="1.0.2" />
   </ItemGroup>
 
   <ItemGroup>
