--- a/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
+++ b/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
@@ -25,6 +25,8 @@
     <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="1.0.0.53229" />
     <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
     <PackageReference Include="SFA.DAS.Providers.Api.Client" Version="0.11.97" />
+    <PackageReference Include="SFA.DAS.Validation" Version="1.0.2" />
+    <PackageReference Include="SFA.DAS.Validation.Mvc" Version="1.0.2" />
     <PackageReference Include="StructureMap" Version="4.7.0" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.5.0" />
     <PackageReference Include="System.Net.Http" Version="4.3.3" />
@@ -34,7 +36,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Messages\SFA.DAS.ProviderRelationships.Messages.csproj" />
-    <ProjectReference Include="..\SFA.DAS.Validation\SFA.DAS.Validation.csproj" />
   </ItemGroup>
 
   <ItemGroup>
