--- a/src/SFA.DAS.ProviderRelationships.Web/Views/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Views/Web.config
@@ -18,6 +18,8 @@
         <add namespace="System.Web.Optimization"/>
         <add namespace="System.Web.Routing" />
         <add namespace="SFA.DAS.ProviderRelationships.Web" />
+        <add namespace="SFA.DAS.ProviderRelationships.Web.ViewModels" />
+        <add namespace="SFA.DAS.Validation.Mvc" />
       </namespaces>
     </pages>
   </system.web.webPages.razor>
