Fixed markup indentation

--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -147,7 +147,7 @@
   <ItemGroup>
     <Folder Include="Content\css\" />
     <Folder Include="Content\img\" />
-    <Folder Include="Content\javascript\" />
+    <Folder Include="Content\js\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj">
