remove unused config

--- a/src/SFA.DAS.ProviderRelationships.Web/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Web.config
@@ -7,10 +7,8 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="ConfigurationStorageConnectionString" value="UseDevelopmentStorage=true" />
     <add key="EnvironmentName" value="LOCAL" />
-    <!--todo: a temporary home for the thumbprint...-->
+    <!--this will come from an environment variable-->
     <add key="TokenCertificateThumbprint" value="6B7ACC520305BFDB4F7252DAEB2177CC091FAAE1" />
-    <!--todo: temporary home-->
-    <add key="MyaBaseUrl" value="https://test2-eas.apprenticeships.sfa.bis.gov.uk/" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
     <add key="webpages:Version" value="3.0.0.0"/>
     <add key="webpages:Enabled" value="false"/>
