--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -107,8 +107,10 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Logging\LoggingContext.cs" />
+    <Compile Include="Mappings\ProviderMappings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RouteDataKeys.cs" />
+    <Compile Include="ViewModels\AddProviderViewModel.cs" />
     <Compile Include="ViewModels\SearchProvidersViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
