--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -55,10 +55,15 @@
     <PackageReference Include="Microsoft.AspNet.TelemetryCorrelation" Version="1.0.4" />
     <PackageReference Include="Microsoft.AspNet.Web.Optimization" Version="1.1.3" />
     <PackageReference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" Version="2.0.1" />
-    <PackageReference Include="NLog.Schema" Version="4.5.9" />
+    <PackageReference Include="NLog.Schema" Version="4.5.3" />
     <PackageReference Include="SFA.DAS.HashingService" Version="1.0.0.57835" />
-    <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
-    <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.1.5" />
+    <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.0.0.56651" />
+    <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.0.0.56651" />
+    <PackageReference Include="SFA.DAS.NServiceBus" Version="3.0.1" />
+    <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="3.0.1" />
+    <PackageReference Include="SFA.DAS.UnitOfWork.EntityFramework" Version="2.0.1" />
+    <PackageReference Include="SFA.DAS.UnitOfWork.Mvc" Version="2.0.1" />
+    <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="2.0.1" />
     <PackageReference Include="SFA.DAS.Validation" Version="1.0.2" />
     <PackageReference Include="SFA.DAS.Validation.Mvc" Version="1.0.2" />
     <PackageReference Include="StructureMap" Version="4.7.0" />
