--- a/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
+++ b/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
@@ -23,8 +23,11 @@
     <PackageReference Include="MediatR" Version="5.1.0" />
     <PackageReference Include="SFA.DAS.Configuration" Version="1.0.0.53229" />
     <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="1.0.0.53229" />
-    <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
+    <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.0.0.56651" />
+    <PackageReference Include="SFA.DAS.NServiceBus" Version="3.0.1" />
+    <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="3.0.1" />
     <PackageReference Include="SFA.DAS.Providers.Api.Client" Version="0.11.97" />
+    <PackageReference Include="SFA.DAS.UnitOfWork" Version="2.0.1" />
     <PackageReference Include="SFA.DAS.Validation" Version="1.0.2" />
     <PackageReference Include="SFA.DAS.Validation.Mvc" Version="1.0.2" />
     <PackageReference Include="StructureMap" Version="4.7.0" />
@@ -42,12 +45,6 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
-    <Reference Include="System.Core" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
 
 </Project>
