--- a/src/SFA.DAS.ProviderRelationships.Jobs/App.config
+++ b/src/SFA.DAS.ProviderRelationships.Jobs/App.config
@@ -25,12 +25,12 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
-  <nlog xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd" xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd">
     <variable name="appName" value="das-providerrelationships-jobs" />
     <variable name="simplelayout" value="${longdate} [${uppercase:${level}}] [${logger}] - ${message} ${onexception:${exception:format=tostring}}" />
     <targets>
-      <target xsi:type="Console" name="Console" layout="${simplelayout}" />
-      <target xsi:type="File" name="File" fileName="${basedir}/logs/${appName}.${shortdate}.log" layout="${simplelayout}" />
+      <target name="Console" layout="${simplelayout}" xsi:type="Console" />
+      <target name="File" fileName="${basedir}/logs/${appName}.${shortdate}.log" layout="${simplelayout}" xsi:type="File" />
     </targets>
     <rules>
       <logger name="*" minlevel="Debug" writeTo="Console, File" />
