--- a/src/SFA.DAS.ProviderRelationships.Web/Web.Release.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Web.Release.config
@@ -1,11 +1,11 @@
 ﻿<?xml version="1.0"?>
 <configuration xmlns:xdt="http://schemas.microsoft.com/XML-Document-Transform">
-  <nlog xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd" xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://www.nlog-project.org/schemas/NLog.xsd NLog.xsd">
     <extensions xdt:Transform="Insert">
       <add assembly="SFA.DAS.NLog.Targets.Redis" />
     </extensions>
     <targets>
-      <target xsi:type="Redis" name="Redis" appName="${appName}" environmentKey="EnvironmentName" connectionStringKey="LoggingRedisConnectionString" includeAllProperties="true" keySettingsKey="LoggingRedisKey" layout="${message}" xdt:Transform="Insert" />
+      <target name="Redis" appName="${appName}" environmentKeyName="EnvironmentName" connectionStringName="LoggingRedisConnectionString" includeAllProperties="true" layout="${message}" xdt:Transform="Insert" xsi:type="Redis" />
     </targets>
     <rules>
       <logger minlevel="Info" writeTo="Redis" xdt:Transform="SetAttributes" />
