--- a/src/SFA.DAS.ProviderRelationships.Messages/SFA.DAS.ProviderRelationships.Messages.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Messages/SFA.DAS.ProviderRelationships.Messages.csproj
@@ -9,14 +9,8 @@
     <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsAsErrors />
-  </PropertyGroup>
-
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    <WarningsAsErrors />
-  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="SFA.DAS.NServiceBus" Version="3.0.1" />
+  </ItemGroup>
 
 </Project>
