--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -124,6 +124,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\StructuremapMvc.cs" />
     <Compile Include="Controllers\ErrorController.cs" />
+    <Compile Include="Controllers\HealthCheckController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PermissionsController.cs" />
     <Compile Include="Controllers\ServiceController.cs" />
@@ -132,16 +133,19 @@
     <Compile Include="DependencyResolution\IoC.cs" />
     <Compile Include="DependencyResolution\StructureMapDependencyScope.cs" />
     <Compile Include="DependencyResolution\StructureMapScopeModule.cs" />
+    <Compile Include="Extensions\TimeSpanExtensions.cs" />
     <Compile Include="Extensions\UrlHelperExtensions.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Logging\LoggingContext.cs" />
+    <Compile Include="Mappings\HealthCheckMappings.cs" />
     <Compile Include="Mappings\ProviderMappings.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UrlParameterKeys.cs" />
     <Compile Include="Startup.cs" />
     <Compile Include="ViewModels\AddProviderViewModel.cs" />
+    <Compile Include="ViewModels\HealthCheckViewModel.cs" />
     <Compile Include="ViewModels\SearchProvidersViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -214,6 +218,7 @@
     <Content Include="Views\Permissions\SearchProviders.cshtml" />
     <Content Include="Views\Shared\_ValidationSummary.cshtml" />
     <Content Include="Views\Permissions\AddProvider.cshtml" />
+    <Content Include="Views\HealthCheck\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
