--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -60,33 +60,21 @@
     <PackageReference Include="Microsoft.AspNet.TelemetryCorrelation" Version="1.0.4" />
     <PackageReference Include="Microsoft.AspNet.Web.Optimization" Version="1.1.3" />
     <PackageReference Include="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" Version="2.0.1" />
-    <PackageReference Include="Microsoft.Owin">
-      <Version>4.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Owin.Host.SystemWeb">
-      <Version>4.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Owin.Security">
-      <Version>4.0.0</Version>
-    </PackageReference>
-    <PackageReference Include="Microsoft.Owin.Security.Cookies">
-      <Version>4.0.0</Version>
-    </PackageReference>
+    <PackageReference Include="Microsoft.Owin" Version="4.0.0" />
+    <PackageReference Include="Microsoft.Owin.Host.SystemWeb" Version="4.0.0" />
+    <PackageReference Include="Microsoft.Owin.Security" Version="4.0.0" />
+    <PackageReference Include="Microsoft.Owin.Security.Cookies" Version="4.0.0" />
     <PackageReference Include="NLog.Schema" Version="4.5.10" />
-    <PackageReference Include="SFA.DAS.EmployerUsers.WebClientComponents">
-      <Version>1.0.0.52781</Version>
-    </PackageReference>
+    <PackageReference Include="SFA.DAS.EmployerUsers.WebClientComponents" Version="1.0.0.52781" />
     <PackageReference Include="SFA.DAS.HashingService" Version="1.0.0.57835" />
     <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
     <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.1.5" />
     <PackageReference Include="SFA.DAS.NServiceBus" Version="3.0.1" />
     <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="3.0.1" />
-    <PackageReference Include="SFA.DAS.UnitOfWork.EntityFramework" Version="2.0.1" />
-    <PackageReference Include="SFA.DAS.UnitOfWork.Mvc" Version="2.0.1" />
-    <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="2.0.1" />
-    <PackageReference Include="SFA.DAS.OidcMiddleware">
-      <Version>2.0.0.61553</Version>
-    </PackageReference>
+    <PackageReference Include="SFA.DAS.UnitOfWork.EntityFramework" Version="2.1.1" />
+    <PackageReference Include="SFA.DAS.UnitOfWork.Mvc" Version="2.1.1" />
+    <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="2.1.1" />
+    <PackageReference Include="SFA.DAS.OidcMiddleware" Version="2.0.0.61553" />
     <PackageReference Include="SFA.DAS.Validation" Version="1.0.2" />
     <PackageReference Include="SFA.DAS.Validation.Mvc" Version="1.0.2" />
     <PackageReference Include="StructureMap" Version="4.7.0" />
