--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="AutoFixture" Version="4.5.0" />
     <PackageReference Include="AutoFixture.NUnit3" Version="4.5.0" />
     <PackageReference Include="AutoMapper " Version="7.0.1" />
+    <PackageReference Include="CloneExtensions" Version="1.4.2" />
     <PackageReference Include="MediatR" Version="5.1.0" />
     <PackageReference Include="Moq" Version="4.10.0" />
     <PackageReference Include="NServiceBus.Testing" Version="7.0.0" />
