treat warnings as errors + update unit test csproj with testing package reference updated (earlier missed check-in)

--- a/src/SFA.DAS.ProviderPermissions.Host/SFA.DAS.ProviderPermissions.Host.csproj
+++ b/src/SFA.DAS.ProviderPermissions.Host/SFA.DAS.ProviderPermissions.Host.csproj
@@ -19,6 +19,16 @@
     <WebJobProjects>$(MSBuildProjectDirectory)\..\SFA.DAS.ProviderRelationships.Jobs\SFA.DAS.ProviderRelationships.Jobs.csproj;$(MSBuildProjectDirectory)\..\SFA.DAS.ProviderRelationships.MessageHandlers\SFA.DAS.ProviderRelationships.MessageHandlers.csproj</WebJobProjects>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
+  </PropertyGroup>
+
   <Target Name="CopyWebJobs">
     <MSBuild Projects="$(WebJobProjects)" Targets="Restore;Build" Properties="DeployOnBuild=true;Configuration=$(Configuration);WebPublishMethod=FileSystem;PublishUrl=$(PublishIntermediateOutputPath)" RunEachTargetSeparately="true" StopOnFirstFailure="true" />
   </Target>
