Updated test projects to not append framework to bin output path so that their dlls can be found by the build script

--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
@@ -3,6 +3,7 @@
   <PropertyGroup>
     <IsGenerateRunCommandFileDisabled>true</IsGenerateRunCommandFileDisabled>
     <IsWebJobProject>true</IsWebJobProject>
+    <LangVersion>latest</LangVersion>
     <OutputType>Exe</OutputType>
     <TargetFramework>net462</TargetFramework>
     <WebJobName>ProviderRelationships-MessageHandlers</WebJobName>
