--- a/src/SFA.DAS.ProviderPermissions.Host/SFA.DAS.ProviderPermissions.Host.csproj
+++ b/src/SFA.DAS.ProviderPermissions.Host/SFA.DAS.ProviderPermissions.Host.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net462</TargetFramework>
+    <LangVersion>latest</LangVersion>
     <OutputType>Library</OutputType>
+    <TargetFramework>net462</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
