--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests.csproj
@@ -1,8 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net462</TargetFramework>
+    <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
     <LangVersion>latest</LangVersion>
+    <TargetFramework>net462</TargetFramework>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
