Updated projects to use entity framework core

--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
@@ -11,35 +11,35 @@
         <WebJobName>ProviderRelationships-MessageHandlers</WebJobName>
         <WebJobType>Continuous</WebJobType>
     </PropertyGroup>
-    
+
     <ItemGroup>
-        <PackageReference Include="Microsoft.Azure.WebJobs" Version="2.2.0" />
-        <PackageReference Include="Microsoft.VisualStudio.SlowCheetah" Version="3.1.66" />
-        <PackageReference Include="NLog.Schema" Version="4.5.10" />
-        <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
-        <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.1.5" />
-        <PackageReference Include="SFA.DAS.NServiceBus" Version="3.0.1" />
-        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="3.0.1" />
-        <PackageReference Include="SFA.DAS.UnitOfWork.EntityFramework" Version="2.1.1" />
-        <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="2.1.1" />
-        <PackageReference Include="StructureMap" Version="4.7.0" />
-        <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
+        <PackageReference Include="Microsoft.Azure.WebJobs" Version="2.2.0"/>
+        <PackageReference Include="Microsoft.VisualStudio.SlowCheetah" Version="3.1.66"/>
+        <PackageReference Include="NLog.Schema" Version="4.5.10"/>
+        <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5"/>
+        <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.1.5"/>
+        <PackageReference Include="SFA.DAS.NServiceBus" Version="3.0.1"/>
+        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="3.0.1"/>
+        <PackageReference Include="SFA.DAS.UnitOfWork.EntityFrameworkCore" Version="2.1.1"/>
+        <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="2.1.1"/>
+        <PackageReference Include="StructureMap" Version="4.7.0"/>
+        <PackageReference Include="WindowsAzure.Storage" Version="9.3.2"/>
     </ItemGroup>
-    
+
     <ItemGroup>
-        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Messages\SFA.DAS.ProviderRelationships.Messages.csproj" />
-        <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj" />
+        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Messages\SFA.DAS.ProviderRelationships.Messages.csproj"/>
+        <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj"/>
     </ItemGroup>
-    
+
     <ItemGroup>
-        <Reference Include="Microsoft.CSharp" />
-        <Reference Include="System" />
-        <Reference Include="System.Configuration" />
+        <Reference Include="Microsoft.CSharp"/>
+        <Reference Include="System"/>
+        <Reference Include="System.Configuration"/>
     </ItemGroup>
-    
+
     <ItemGroup>
         <None Include="App.config">
-        <TransformOnBuild>true</TransformOnBuild>
+            <TransformOnBuild>true</TransformOnBuild>
         </None>
         <None Include="App.*.config">
             <DependentUpon>App.config</DependentUpon>
