Added startup tasks

--- a/src/SFA.DAS.ProviderRelationships.Messages/SFA.DAS.ProviderRelationships.Messages.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Messages/SFA.DAS.ProviderRelationships.Messages.csproj
@@ -15,4 +15,8 @@
         <PackageReference Include="SFA.DAS.NServiceBus" Version="3.0.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Temp" />
+    </ItemGroup>
+
 </Project>
