--- a/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
+++ b/src/SFA.DAS.ProviderRelationships/SFA.DAS.ProviderRelationships.csproj
@@ -16,9 +16,11 @@
         <PackageReference Include="Microsoft.Owin.Security" Version="4.0.0" />
         <PackageReference Include="Microsoft.Owin.Security.Cookies" Version="4.0.0" />
         <PackageReference Include="Microsoft.WindowsAzure.ConfigurationManager" Version="3.2.3" />
+        <PackageReference Include="SFA.DAS.Authorization" Version="0.1.1" />
         <PackageReference Include="SFA.DAS.Configuration" Version="1.0.0.53229" />
         <PackageReference Include="SFA.DAS.Configuration.AzureTableStorage" Version="1.0.0.53229" />
         <PackageReference Include="SFA.DAS.EmployerUsers.WebClientComponents" Version="1.0.0.52781" />
+        <PackageReference Include="SFA.DAS.HashingService" Version="1.0.0.57835" />
         <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
         <PackageReference Include="SFA.DAS.NServiceBus" Version="3.0.1" />
         <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="3.0.1" />
