Added Testing framework for cosmosDb into project

--- a/src/SFA.DAS.ProviderRelatonships.Document.Repository.UnitTests/SFA.DAS.ProviderRelatonships.Document.Repository.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelatonships.Document.Repository.UnitTests/SFA.DAS.ProviderRelatonships.Document.Repository.UnitTests.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Document.Model\SFA.DAS.ProviderRelationships.Document.Model.csproj" />
     <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Document.Repository\SFA.DAS.ProviderRelationships.Document.Repository.csproj" />
   </ItemGroup>
 
