Try fixing the System.Ne.Http reference y adding a reference to the project

--- a/src/SFA.DAS.ProviderRelatonships.Document.Repository.UnitTests/SFA.DAS.ProviderRelatonships.Document.Repository.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelatonships.Document.Repository.UnitTests/SFA.DAS.ProviderRelatonships.Document.Repository.UnitTests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net462</TargetFramework>
@@ -17,4 +17,7 @@
     <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Document.Repository\SFA.DAS.ProviderRelationships.Document.Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Reference Include="System.Net.Http" />
+  </ItemGroup>
 </Project>
