added woff mime maps

--- a/src/SFA.DAS.ProviderRelationships.Web/Web.config
+++ b/src/SFA.DAS.ProviderRelationships.Web/Web.config
@@ -363,6 +363,10 @@
                 </rule>
             </outboundRules>
         </rewrite>
+        <staticContent>
+            <mimeMap fileExtension="woff" mimeType="application/font-woff"/>
+            <mimeMap fileExtension="woff2" mimeType="application/font-woff2"/>
+        </staticContent>
         <validation validateIntegratedModeConfiguration="false"/>
     </system.webServer>
 </configuration>
